@@ -9,7 +9,7 @@
             
             <control type="label" id="100">
                 <include>Dialog_Standard_Header</include>
-                <label>13388</label>
+                <label>$LOCALIZE[31037]</label>
             </control>
 
             <control type="label">
