@@ -1,3 +1,7 @@
+[B]0.9.5[/B]
+Close osd after subs download.
+On subs button, download if no subs to switch on.
+
 [B]0.9.4[/B]
 Fix parentfolder list position
 New osd design
